tests/e2e/route/00-assert.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplest-collector
status:
  readyReplicas: 1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    something.com: "true"
  labels:
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: otlp-grpc-simplest-route
  name: otlp-grpc-simplest-route
  ownerReferences:
  - apiVersion: opentelemetry.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: OpenTelemetryCollector
    name: simplest
spec:
  host: otlp-grpc.example.com
  path: /otlp-grpc
  port:
    targetPort: otlp-grpc
  to:
    kind: Service
    name: simplest-collector
    weight: null
  wildcardPolicy: None
